# fuzzCy

./: Makefile  README.md  levenshtein_import.pyx  pyproject.toml  pytest.ini  setup.py
experiments/: fuzzyWazzy.ipynb  sketching_cython_code.ipynb
fuzzcy/: main.py
fuzzcy/core/: levenshtein.c  levenshtein.pyx  sequence_matchers.py
fuzzcy/fuzzy/: exceptions.py  fuzzy.c  fuzzy.py  fuzzy.pyx  similarity_algs.py
src/core/: exceptions.py  levenshtein.c  levenshtein.h  levenshtein.py  levenshtein_py.py
tests/: test_fuzzy.py  test_kmp_table.py  test_kpm_search.py  test_levenshtein.py  test_matrix_instantiation.py  test_similarity_algs.py
