[tool.poetry]
name = "fuzzcy"
version = "0.1.0"
description = ""
authors = ["Cloves Paiva <cloves.paiva@extremedigital.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.33"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
commitizen = "^2.42.1"
black = "^23.1.0"
isort = "^5.12.0"
bandit = "^1.7.4"
pytest = "^7.2.2"
ipykernel = "^6.21.3"
easycython = "^1.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
